<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.splash.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/splash_img"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:adjustViewBounds="true"
            android:padding="@dimen/common_margin_5"
            android:scaleType="centerInside"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/energ_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/img_desc"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_32" />

        <TextView
            android:id="@+id/slogan_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_desc"
            android:gravity="center"
            android:text="@string/slogan"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_20" />
    </LinearLayout>
</LinearLayout>