<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    tools:context=".ui.login.fragment.LoginFragment">

    <LinearLayout
        android:id="@+id/login_base_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/title_lbl"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight=".3"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_32" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".7"
            android:background="@drawable/bg_login_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/common_margin_30"
                android:layout_marginBottom="@dimen/common_margin_30"
                android:text="@string/login_lbl"
                android:textSize="@dimen/text_18" />

            <LinearLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/login_lbl"
                android:layout_marginStart="@dimen/common_margin_25"
                android:layout_marginTop="@dimen/common_margin_10"
                android:layout_marginEnd="@dimen/common_margin_25"
                android:layout_marginBottom="@dimen/common_margin_5"
                android:background="@drawable/bg_edittext"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/common_margin_20"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/img_desc"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_email" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email_etext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/common_margin_10"
                    android:layout_marginEnd="@dimen/common_margin_10"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/emailid"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/username_layout"
                android:layout_marginStart="@dimen/common_margin_25"
                android:layout_marginTop="@dimen/common_margin_10"
                android:layout_marginEnd="@dimen/common_margin_25"
                android:background="@drawable/bg_edittext"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/password_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/common_margin_20"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/img_desc"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_password" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password_etext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/common_margin_10"
                    android:layout_marginEnd="@dimen/common_margin_10"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_14" />
            </LinearLayout>

            <TextView
                android:id="@+id/forgot_password_tview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_layout"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/common_margin_20"
                android:layout_marginEnd="@dimen/common_margin_20"
                android:layout_marginBottom="@dimen/common_margin_40"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_14"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/password_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/common_margin_20"
                android:layout_marginEnd="@dimen/common_margin_20"
                android:background="@drawable/btn_bg_colorprimary"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="100dp"
                android:paddingEnd="100dp"
                android:text="@string/login_lbl"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16" />

            <LinearLayout
                android:id="@+id/dont_have_acc_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_btn"
                android:layout_marginTop="@dimen/common_margin_40"
                android:orientation="vertical">

                <View
                    android:id="@+id/login_divider_view"
                    style="@style/view_theme" />

                <TextView
                    android:id="@+id/dont_have_acc_tview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/common_margin_20"
                    android:gravity="center"
                    android:textColor="@color/hint_color"
                    android:textSize="@dimen/text_14" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>