<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/product_item_clay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:focusableInTouchMode="false"
        android:minHeight="80dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:cardMaxElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:contentPadding="0dp">

        <LinearLayout
            android:id="@+id/product_item_llay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/common_margin_5"
            android:paddingBottom="@dimen/common_margin_10">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_product_item"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/common_margin_5"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/img_desc"
                android:focusable="true"
                android:padding="@dimen/common_margin_5"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/app_logo" />

            <LinearLayout
                android:id="@+id/product_detail_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/product_val_tview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLines="2"
                    android:paddingStart="@dimen/common_margin_10"
                    android:paddingEnd="@dimen/common_margin_5"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_16" />

                <TextView
                    android:id="@+id/product_price_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:maxLines="2"
                    android:paddingStart="@dimen/common_margin_10"
                    android:paddingEnd="@dimen/common_margin_10"
                    android:text="@string/product_lbl"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_14" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>